--- a/config/content.htm
+++ b/config/content.htm
@@ -292,13 +292,32 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><span>下載<span> </span><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/EdHAOThcQztGj4EZy5Duab0Bvcf3AbzsC_MLsCfmwBXAFg?e=4dPh6O">NX2027.3401_lite_cad2022.7z</a><span> </span>(需要下載密碼, 執行時必須連網至機械設計工程系的認證伺服器才能開啟)</span></p>
 <h1>任務一</h1>
 <h2>零件</h2>
-<p><strong><img alt="" height="544" src="/images/零件1.jpg" width="800"/></strong></p>
-<p><strong><img alt="" height="389" src="/images/零件2.jpg" width="560"/></strong> <strong><img alt="" height="521" src="/images/零件3.jpg" width="515"/></strong> <strong><img alt="" height="548" src="/images/零件4.jpg" width="664"/></strong></p>
-<h2>組合圖</h2>
-<p><strong><img alt="" height="513" src="/images/組合.jpg" width="563"/></strong></p>
-<h2>雲端</h2>
-<p><a href="https://drive.google.com/drive/folders/1_R6SqPMNQUQSUCQY-x7qUbmjYFTgZzOd?usp=sharing">檔案位置</a></p>
+<p><a href="https://drive.google.com/file/d/1cD42LtqeujAnBB5rKFRVCRNtozzgc4u2/view?usp=sharing">底座</a></p>
 <p></p>
+<p><strong><img alt="" height="544" src="/images/零件1.jpg" width="800"/></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><a href="https://drive.google.com/file/d/1oSgWt3nD0vaxAnRGioMXJnq0RhYxVNCK/view?usp=sharing">上座</a></p>
+<p><b></b></p>
+<p><b></b></p>
+<p><strong><img alt="" height="389" src="/images/零件2.jpg" width="560"/></strong></p>
+<p></p>
+<p></p>
+<p><a href="https://drive.google.com/file/d/1f31FpWb8IxnFdVCGOMSNztnwu2rBPa6y/view?usp=sharing">支架</a></p>
+<p></p>
+<p></p>
+<p><strong><img alt="" height="521" src="/images/零件3.jpg" width="515"/></strong></p>
+<p></p>
+<p></p>
+<p><a href="https://drive.google.com/file/d/1RBlfHUTyO3VpLhwpG4UquVuHOEehj9Hv/view?usp=sharing">軌道</a></p>
+<p></p>
+<p></p>
+<p><strong><img alt="" height="548" src="/images/零件4.jpg" width="664"/></strong></p>
+<h2>組合圖</h2>
+<p><a href="https://drive.google.com/file/d/1_OQsrtRv7uDwMNPcyPC3Jv0M468hqJEU/view?usp=sharing">組合圖</a></p>
+<p></p>
+<p></p>
+<p><strong><img alt="" height="513" src="/images/組合.jpg" width="563"/></strong></p>
 <p></p>
 <h1>軌道永動機</h1>
 <h2>零件</h2>
@@ -313,6 +332,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"><img alt="" height="430" src="/images/123.jpg" width="800"/></div>
 <h2>組合圖</h2>
+<p></p>
+<p></p>
 <p><img alt="" height="450" src="/images/未命名1.jpg" width="800"/></p>
 <h1>網站評分</h1>
 <p>自我評分:60</p>
